--- a/Lab-dotNet/Lab-dotNet.csproj
+++ b/Lab-dotNet/Lab-dotNet.csproj
@@ -8,4 +8,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+      <PackageReference Include="Npgsql" Version="8.0.3" />
+    </ItemGroup>
+
 </Project>
